--- a/CSS/main.css
+++ b/CSS/main.css
@@ -85,3 +85,49 @@ ul.main-menu {
     padding: 7rem 0;
 }
 }
+
+/** footer*/
+footer.footer {
+  padding: 30px;
+}
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
+  flex-direction: row;
+  gap: 2rem;
+}
+strong.titulo {
+  padding: 30px;
+  font-size: 32px;
+}
+p.description {
+  padding: 30px;
+}
+.rs {
+  padding: 30px;
+}
+
+.formulario {
+  flex-basis: 50%;
+}
+input[type="name"] {
+  width: 254px;
+  height: 30px;
+}
+input[type="email"]{
+  width: 254px;
+  height: 30px;
+  margin: 4px 0;
+}
+input[type="text"]{
+  width: 254px;
+  height: 98px;
+}
+input[type="submit"] {
+  margin: 4px 0;
+  padding: 10px;
+}
+.info {
+  flex-basis: 50%;
+}
