--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,11 +8,16 @@
   --piggy-pink: #F6DCE9;
   --pink-lace: #F9E6F0;
   --white: #ffffff;
+  /** Form */
   --height-input: 69px;
 
-  /**/
+  /* Enlances*/
   --color-menu-link: var( --charleston-green-v1 );
+
+  /* valor estandar de las fuentes*/
+  --overall-font-size: 62.5%;
 }
+
 
 * {
   /* border: 1px dotted blue; */
@@ -20,25 +25,29 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+html {
+  font-size: var( --overall-font-size );
+}
 body {
   font-family: "Epilogue", sans-serif;
+  font-size: 1.6rem; /** 16px */
 }
 
 p {
   line-height: 1.4;
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 /** Header */
 #logo {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 600;
 }
 
 .menu-item a {
   text-decoration: none;
   color: var( --color-menu-link );
+  font-size: 1.7rem;
 }
 .menu-item a:hover {
   color: gray;
@@ -86,8 +95,15 @@ ul.main-menu {
 .bio-content {
   padding: 4.8rem 0;
 }
+.biography {
+  margin-top: 6rem;
+  font-size: 1.7rem;
+}
+.biography strong {
+  font-size: 1.7rem;
+}
 .avatar-name {
-  font-size: 17px;
+  font-size: 1.7rem;
   margin: 1.2rem 0;
 }
 span.name-designer {
@@ -100,9 +116,8 @@ span.name-designer {
 span.profession {
   display: block;
 }
-.biography {
-  margin-top: 6rem;
-}
+
+
 
 @media ( min-width: 768px ) {
   .bio-content {
@@ -122,8 +137,15 @@ span.profession {
 }
 
 /** Main: Section Story */
+
 .description-content {
   padding: 5rem 0;
+}
+h2 {
+  font-size: 2.4rem;
+}
+p {
+  font-size: 1.6rem;
 }
 .description-content *:first-child {
   margin-bottom: 2.5rem;
@@ -164,7 +186,18 @@ span.profession {
   border-top: 3px solid var(--anti-flash-white);
   padding: 3rem 0;
 }
-
+input::-webkit-input-placeholder {
+  font-size: 1.7rem;
+}
+input:-moz-placeholder {
+  font-size: 1.7rem;
+}
+input::-moz-placeholder {
+  font-size: 1.7rem;
+}
+input::-ms-input-placeholder {
+  font-size: 1.7rem;
+}
 @media ( min-width: 768px ) {
   .footer-content {
       flex-direction: row;
@@ -177,6 +210,10 @@ span.profession {
 }
 .lets-work h2 {
   margin-bottom: 2.4rem;
+  font-size: 3.2rem;
+}
+.lets-work p {
+  font-size: 1.7rem;
 }
 ul.social-media {
   list-style: none;
@@ -206,6 +243,7 @@ ul.social-media {
   padding: 25px 85px;
   border: 1px solid transparent;
   margin: 1.6rem 0;
+  font-size: 2rem;
 }
 .btn--bg-black {
   background-color: var( --black );
